--- a/APPVIEW/Views/Shared/_LayoutWeb.cshtml
+++ b/APPVIEW/Views/Shared/_LayoutWeb.cshtml
@@ -147,14 +147,37 @@
                             <li class="nav-item submenu dropdown">
                                     @if (User.Identity.IsAuthenticated)
                                     {
-                                        var isAdmin = User.IsInRole("Admin");
-                                        var IsStaff = User.IsInRole("Staff");
-                                    <!-- Hiển thị menu cho người dùng đã đăng nhập -->
                                     <a href="#" style="color:black" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                                             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z" />
                                         </svg>
                                     </a>
+                                        var isAdmin = User.IsInRole("Admin");
+                                        var IsStaff = User.IsInRole("Staff");
+                                        var IsCus = User.IsInRole("Customer");
+                                        if (IsCus)
+                                        {
+                                      
+                                       
+                                        <ul class="dropdown-menu">
+                                            <li class="nav-item">
+                                                <a asp-route-id_User="@Id_userValue" class="nav-link" asp-controller="Account" asp-action="MyProfile">
+                                                    <img src="~/UserImage/@AvatarUserValue" alt="Avatar" style="width: 25px; height: 25px; border-radius: 50%; object-fit: cover;">
+                                                    Hồ sơ của tôi
+                                                </a>
+
+                                            </li>                                               
+                                            <li class="nav-item">
+                                                <a class="nav-link" asp-action="Thongtin" asp-controller="Home">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
+                                                        <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2" />
+                                                    </svg> Đơn hàng
+                                                </a>
+                                            </li>
+                                            <li class="nav-item"><a class="nav-link" asp-action="YourVouchers" asp-controller="Home">Kho voucher</a></li>
+
+                                        </ul>
+                                        }
                                     <ul class="dropdown-menu">
                                         <li class="nav-item">
                                             <a asp-route-id_User="@Id_userValue" class="nav-link" asp-controller="Account" asp-action="MyProfile">
@@ -182,12 +205,7 @@
                                                     Trang quản trị
                                                 </a>
                                             </li>
-                                            }
-                                        <li class="nav-item"><a class="nav-link" asp-action="Thongtin" asp-controller="Home"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
-                                                    <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2" />
-                                                </svg> Đơn hàng</a></li>
-                                        <li class="nav-item"><a class="nav-link" asp-action="YourVouchers" asp-controller="Home">Kho voucher</a></li>
-
+                                            }                                      
                                     </ul>
                                     }
                                     else
