--- a/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -202,6 +202,15 @@
                                         <div data-i18n="Dashboards">Đơn Đã Xác Nhận</div>
                                     </a>
                                 </li>
+                                <li class="menu-item @(ViewContext.RouteData.Values["controller"].ToString() == "Bill" && ViewContext.RouteData.Values["action"].ToString() == "ShowBillDaNhan" ? "active" : "")">
+                                    <a href="~/QLBills/ShowBillXacNhan" class="menu-link">
+
+                                        <span class="mdi mdi-receipt-text-check"></span>
+
+
+                                        <div data-i18n="Dashboards">Đơn Đang Giao</div>
+                                    </a>
+                                </li>
                                 <li class="menu-item @(ViewContext.RouteData.Values["controller"].ToString() == "Bill" && ViewContext.RouteData.Values["action"].ToString() == "DonHuy" ? "active" : "")">
                                     <a href="~/QLBills/DonHuy" class="menu-link">
                                         <div data-i18n="Dashboards">Đơn Chờ Hủy</div>
