--- a/APPVIEW/Views/Home/Thongtin.cshtml
+++ b/APPVIEW/Views/Home/Thongtin.cshtml
@@ -274,12 +274,9 @@
                                             }
                                             else if (itembill.Status == 5)
                                             {
-                                                <span>Thanh toán thành công </span>
+                                                <span>Đơn chờ hủy </span>
                                             }
-                                            else if (itembill.Status == 6)
-                                            {
-                                                <span>Thanh toán không thành công </span>
-                                            }
+
                                             else if (itembill.Status == 0)
                                             {
                                                 <span>Đơn chờ hủy </span>
@@ -322,9 +319,14 @@
 
                                         {
                                             <button style="background-color:royalblue ; border-radius:12px ; border:none"> @Html.ActionLink("Đổi thông tin nhận hàng", "UpdateAddress", new { id = itembill.id }, new { style = "color:black;" }) </button>
+                                
+                                        }
+                                        @if(itembill.Status == 1 || itembill.Status == 2)
+                                        {
+
                                             <button style="background-color:royalblue ; border-radius:12px ; border:none"> @Html.ActionLink("Hủy đơn", "HuyDon", new { id = itembill.id }, new { style = "color:black;" }) </button>
                                         }
-    
+
                                         @if (itembill.Status == 3)
 
                                         {
