--- a/APPVIEW/Views/QLBills/ShowBillDaNhan.cshtml
+++ b/APPVIEW/Views/QLBills/ShowBillDaNhan.cshtml
@@ -1,6 +1,5 @@
-﻿
-@{
-    ViewData["Title"] = "ShowBillDaNhan";
+﻿@{
+    ViewData["Title"] = "ShowBill";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
     @using APPDATA.Models;
     List<Bill> bill = ViewBag.viewbill;
@@ -15,7 +14,7 @@
 
 
 
-<form asp-controller="QLBills" asp-action="ShowBill" class="row contact_form" method="post">
+<form asp-controller="QLBills" asp-action="ShowBillDaNhan" class="row contact_form" method="post">
     <div class="row">
         <div class="col-md-3 form-group">
             <input type="text" class="form-control" name="search" placeholder="Nhập mã hóa đơn để tìm kiếm">
@@ -30,7 +29,7 @@
     <div class="card-header">
     </div>
     <div class="card-body">
-     
+
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead>
@@ -45,7 +44,7 @@
                         <th>Trạng thái</th>
                         <th>Ngày tạo</th>
 
-                
+
                     </tr>
                 </thead>
                 <tbody>
@@ -85,17 +84,17 @@
                                 </td>
                                 @if (itembill.Status == 1)
                                 {
-                                    <td>  Chờ xác nhận + @itembill.Type</td>
+                                    <td>  Chờ xác nhận</td>
 
                                 }
                                 else if (itembill.Status == 2)
                                 {
-                                    <td>  Đã xác nhận đơn hàng + @itembill.Type</td>
+                                    <td>  Đã xác nhận đơn hàng</td>
 
                                 }
                                 else if (itembill.Status == 3)
                                 {
-                                    <td>Đang giao + @itembill.Type</td>
+                                    <td>Đang giao</td>
                                 }
                                 else if (itembill.Status == 4)
                                 {
@@ -116,7 +115,7 @@
                                 <td>
                                     <button style="width:140px" class="btn btn-danger"> @Html.ActionLink("Đã Nhận", "NhanHang", new { id = itembill.id }, new { style = "color:white;" }) </button>
                                 </td>
-                             
+                            
                                 <td>
                                     <button style="width:140px" class="btn btn-danger"> @Html.ActionLink("Chi Tiết ", "Chitiet", new { id = itembill.id }, new { style = "color:white;" }) </button>
                                 </td>
@@ -135,6 +134,3 @@
         </div>
     </div>
 </div>
-
-
-
