--- a/APPVIEW/Views/QLBills/DonHuy.cshtml
+++ b/APPVIEW/Views/QLBills/DonHuy.cshtml
@@ -94,6 +94,13 @@
                 else if (itembill.Status == 4)
                 {
                     <td>Đã giao</td>
+                } else if (itembill.Status == 0)
+                {
+                    <td>Chờ Hủy</td>
+                }
+                else if (itembill.Status == 5)
+                {
+                    <td>Chờ Hủy</td>
                 }
 
 
@@ -139,12 +146,40 @@
                 <td>
                     @itembill.CreateDate
                 </td>
-
                 <td>
-                    <button class="btn btn-danger"> @Html.ActionLink("Xác nhận hủy đơn hàng ", "HuyDon", new { id = itembill.id }, new { style = "color:white;" }) </button>
-
+                    <button data-itemid="@itembill.id" style="width:140px" class="btn btn-danger cancel-button">
+                        <a href="@Url.Action("HuyDon2", new { id = itembill.id })" style="color:white;">Hủy Đơn</a>
+                    </button>
+                </td>   
+                <td>
+                    <button data-itemid="@itembill.id" style="width:150px" class="btn btn-danger ">
+                        <a href="@Url.Action("KhongHuy", new { id = itembill.id })" style="color:white;"> Không Hủy</a>
+                    </button>
+                </td>
+                <td>
+                    <button style="width:140px" class="btn btn-danger"> @Html.ActionLink("Chi Tiết ", "Chitiet", new { id = itembill.id }, new { style = "color:white;" }) </button>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        var cancelButtons = document.querySelectorAll('.cancel-button');
+
+        cancelButtons.forEach(function (cancelButton) {
+            cancelButton.addEventListener("click", function (event) {
+                event.preventDefault();
+                var itemId = this.getAttribute('data-itemid');
+                var confirmation = confirm("Bạn có chắc chắn muốn hủy đơn này không?");
+
+                if (confirmation) {
+                    // Chuyển hướng đến action HuyDon nếu xác nhận
+                    window.location.href = '@Url.Action("HuyDon2", "QLBills")?id=' + itemId;
+                } else {
+                    // Không làm gì nếu hủy
+                }
+            });
+        });
+    });
+</script>
