--- a/APPVIEW/Views/Home/Thongtin.cshtml
+++ b/APPVIEW/Views/Home/Thongtin.cshtml
@@ -323,8 +323,10 @@
                                         }
                                         @if(itembill.Status == 1 || itembill.Status == 2)
                                         {
-
-                                            <button style="background-color:royalblue ; border-radius:12px ; border:none"> @Html.ActionLink("Hủy đơn", "HuyDon", new { id = itembill.id }, new { style = "color:black;" }) </button>
+                                            <button class="cancel-button" data-itemid="@itembill.id" style="background-color:royalblue ; border-radius:12px ; border:none">
+                                                <a href="@Url.Action("HuyDon", new { id = itembill.id })" style="color:black;">Hủy Đơn</a>
+                                            </button>
+                                          
                                         }
 
                                         @if (itembill.Status == 3)
@@ -358,3 +360,23 @@
 
 
 }
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        var cancelButtons = document.querySelectorAll('.cancel-button');
+
+        cancelButtons.forEach(function (cancelButton) {
+            cancelButton.addEventListener("click", function (event) {
+                event.preventDefault();
+                var itemId = this.getAttribute('data-itemid');
+                var confirmation = confirm("Bạn có chắc chắn muốn hủy đơn này không?");
+
+                if (confirmation) {
+                    // Chuyển hướng đến action HuyDon nếu xác nhận
+                    window.location.href = '@Url.Action("HuyDon", "Home")?id=' + itemId;
+                } else {
+                    // Không làm gì nếu hủy
+                }
+            });
+        });
+    });
+</script>
